--- a/index.html
+++ b/index.html
@@ -17,26 +17,77 @@
 <body>
     <main>
         <header>
-             <div class="top-scial-bar">
-                  <div class="L1 L_cmn01">
-                      <p><i class="fas fa-phone-alt"></i> +91 7673686578</p>
-                      <p><i class="far fa-envelope"></i>info.cossetworld@gmail.com</p>
-                  </div>
-                  <div class="R1 L_cmn01">
-                      <p>Follow us :-  
-                       <a href="#"><i class="far fa-envelope"></i></a> 
-                       <a href="#"><i class="fab fa-twitter"></i></a>
-                       <a href="#"><i class="fab fa-instagram"></i></a>
-                       <a href="#"><i class="fab fa-youtube"></i></a>
-                      </p>
-                  </div>
-             </div>
-            <div class="logo">
-                <a href="javascript:void(0)">
-                    <img src="" alt="image">
-                </a>
+            <div class="top-social-bar">
+                <div class="child-wrp">
+                    <div class="L1 L_cmn01">
+                        <p><i class="fas fa-phone-alt"></i> +91 7673686578</p>
+                        <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p>
+                    </div>
+                    <div class="R1 L_cmn01">
+                        <p>Follow us :-  
+                        <a href="#"><i class="fab fa-facebook"></i></a> 
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        </p>
+                    </div>
+              </div>
             </div>
+            <div class="Nav-wrp">
+                <nav> 
+                    <div class="logo nav_cmn">
+                        <a href="javascript:void(0)">
+                            <img src="image/logo3.png" alt="image">
+                        </a>
+                    </div>
+                    <div class="nav-item nav_cmn">
+                        <ul>
+                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                                Beauty
+                                <i class="fas fa-sort-down"></i>
+                            </a></li>
+                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                                Slimming
+                                <i class="fas fa-sort-down"></i>
+                            </a></li>
+                            <li class="hair-care">
+                                <a href="javascript:void(0)" class="hvr-underline-from-left"> Hair Care
+                                    <i class="fas fa-sort-down"></i>
+                                </a>
+                               <ul class="drop_down">
+                                     <li><a href="#">Comfort Treatment</a></li>
+                                     <li><a href="#">Vitality Treatment</a></li>
+                                     <li><a href="#">Rebalance Treatment</a></li>
+                                     <li><a href="#">Purity Treatment</a></li>
+                                     <li><a href="#">Reconstruct</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                                Dermat 
+                                <i class="fas fa-sort-down"></i>
+                            </a></li>
+                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                                Laser Treatment
+                                <i class="fas fa-sort-down"></i>
+                            </a></li>
+                        </ul>
+                    </div>
+                </nav>
+           </div>
         </header>
+        <!-- banner -->
+        <section class="Banner_Wrapper">
+            <div class="container">
+                <div class="Banner_Content">
+                    <div class="Banner_child">
+                        <h1>No More Shaving, <br>
+                            Waxing or Bleaching!!</h1>
+                            <p>Get Advanced Laser Hair Reduction at CW</p>
+                            <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
