--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                                 <a href="javascript:void(0)" class="hvr-underline-from-left"> Hair Care
                                     <i class="fas fa-sort-down"></i>
                                 </a>
-                               <ul class="drop_down">
-                                     <li><a href="#">Comfort Treatment</a></li>
-                                     <li><a href="#">Vitality Treatment</a></li>
-                                     <li><a href="#">Rebalance Treatment</a></li>
-                                     <li><a href="#">Purity Treatment</a></li>
-                                     <li><a href="#">Reconstruct</a></li>
-                                </ul>
                             </li>
+                            <ul class="drop_down">
+                                <li><a href="#">Comfort Treatment</a></li>
+                                <li><a href="#">Vitality Treatment</a></li>
+                                <li><a href="#">Rebalance Treatment</a></li>
+                                <li><a href="#">Purity Treatment</a></li>
+                                <li><a href="#">Reconstruct</a></li>
+                           </ul>
                             <li><a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Dermat 
                                 <i class="fas fa-sort-down"></i>
@@ -77,17 +77,108 @@
         </header>
         <!-- banner -->
         <section class="Banner_Wrapper">
+            <div class="banner-child slider1  owl-carousel">
+                <div class="banner-sub-child">
+                   <div class="container">
+                      <div class="Banner_Content">
+                            <div class="Banner_child">
+                                <h1>No More Shaving, <br>
+                                    Waxing or Bleaching!!</h1>
+                                    <p>Get Advanced Laser Hair Reduction at CW</p>
+                                    <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- banner2 -->
+                <div class="banner-sub-child banner-sub-child2">
+                    <div class="container">
+                       <div class="Banner_Content">
+                             <div class="Banner_child">
+                                 <h1>No More Shaving, <br>
+                                     Waxing or Bleaching!!</h1>
+                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                <!-- end--here -->
+                <!-- banner3 -->
+                <div class="banner-sub-child banner-sub-child3">
+                    <div class="container">
+                       <div class="Banner_Content">
+                             <div class="Banner_child">
+                                 <h1>No More Shaving, <br>
+                                     Waxing or Bleaching!!</h1>
+                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                <!-- end---here -->
+           </div>
+        </section>
+
+        <!-- Our ---services -->
+        <section class="Service_wrapper">
             <div class="container">
-                <div class="Banner_Content">
-                    <div class="Banner_child">
-                        <h1>No More Shaving, <br>
-                            Waxing or Bleaching!!</h1>
-                            <p>Get Advanced Laser Hair Reduction at CW</p>
-                            <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                <div class="Service_heading">
+                    <h2>Our<span> Services</span></h2>
+                    <p>We at COSSET WORLD  takes complete care of your health and wellness. We believe it is of utmost importance to take care of oneself.</p>
+                </div>
+                <div class="Service_content">
+                    <div class="Grid_wrp">
+                        <div class="Grid-item1 Grid-item_cmn01">
+                            <div class="grid-hvr-content">
+                                <div class="Hvr_cnt">
+                                    <h2>Beauty</h2>
+                                    <p>Be Beautiful With Our Services</p>
+                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                </div>
+                            </div>
+                            <div class="bottom_Bar">
+                                <h2>Beauty</h2>
+                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="Grid-item2 Grid-item_cmn01">
+                            <div class="grid-hvr-content">
+                                <div class="Hvr_cnt">
+                                    <h2>Beauty</h2>
+                                    <p>Be Beautiful With Our Services</p>
+                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                </div>
+                            </div>
+                            <div class="bottom_Bar">
+                                <h2> Laser Treatment</h2>
+                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="Grid-item3 Grid-item_cmn01">
+                            <div class="bottom_Bar">
+                                <h2>Laser Treatment Dermat</h2>
+                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="Grid-item4 Grid-item_cmn01">
+                            <div class="bottom_Bar">
+                                <h2>Slimming</h2>
+                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="Grid-item5 Grid-item_cmn01">
+                            <div class="bottom_Bar">
+                                <h2>Hair Care</h2>
+                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- end-----here -->
     </main>
 
 
