--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="Service_content">
                     <div class="Grid_wrp">
-                        <div class="Grid-item1 Grid-item_cmn01">
+                        <div class="Grid-item1 Grid-item_cmn01" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Beauty</h2>
@@ -143,7 +143,7 @@
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
-                        <div class="Grid-item2 Grid-item_cmn01">
+                        <div class="Grid-item2 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
                                     <h2>Beauty</h2>
@@ -156,19 +156,40 @@
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
-                        <div class="Grid-item3 Grid-item_cmn01">
+                        <div class="Grid-item3 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
+                            <div class="grid-hvr-content">
+                                <div class="Hvr_cnt">
+                                    <h2>Beauty</h2>
+                                    <p>Be Beautiful With Our Services</p>
+                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                </div>
+                            </div>
                             <div class="bottom_Bar">
                                 <h2>Laser Treatment Dermat</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
-                        <div class="Grid-item4 Grid-item_cmn01">
+                        <div class="Grid-item4 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
+                            <div class="grid-hvr-content">
+                                <div class="Hvr_cnt">
+                                    <h2>Beauty</h2>
+                                    <p>Be Beautiful With Our Services</p>
+                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                </div>
+                            </div>
                             <div class="bottom_Bar">
                                 <h2>Slimming</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
-                        <div class="Grid-item5 Grid-item_cmn01">
+                        <div class="Grid-item5 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
+                            <div class="grid-hvr-content">
+                                <div class="Hvr_cnt">
+                                    <h2>Beauty</h2>
+                                    <p>Be Beautiful With Our Services</p>
+                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                </div>
+                            </div>
                             <div class="bottom_Bar">
                                 <h2>Hair Care</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
@@ -179,6 +200,33 @@
             </div>
         </section>
         <!-- end-----here -->
+
+        <!-- About---section---- -->
+          <section class="About_Wrapper">
+             <div class="container">
+                 <div class="About_Content">
+                      <div class="Abt_left Abt_cmn01">
+                          <h2>About <span>Cosset World</span></h2>
+                          <p>The Cosset World is one of North India's oldest and well-established companies specializing in Wellness, Cosmetic Dermatology, and Aesthetic Care. We are dedicated to helping clients with wellness concerns like non-invasive fat-loss, inch-loss, and body contouring procedures to cosmetic anti-aging skincare solutions like facial skin, skincare, fillers, and laser rejuvenation.</p>
+                          <a href="javascript:void(0)" class="hvr-bounce-to-right">Read more</a>
+                        </div>
+                      <div class="Abt_right Abt_cmn01">
+                          <img src="image/About.png" alt="image">
+                      </div>
+                 </div>
+             </div>
+          </section>
+        <!-- end---here -->
+
+        <!-- Book an Appointment -->
+        <section class="Appointment_Wrapper">
+            <div class="Container">
+                <div class="Appointment_Content">
+                    
+                </div>
+            </div>
+        </section>
+        <!-- end--here -->
     </main>
 
 
