--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="shortcut icon" href="image/fevicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -220,11 +220,20 @@
 
         <!-- Book an Appointment -->
         <section class="Appointment_Wrapper">
-            <div class="Container">
-                <div class="Appointment_Content">
-                    
+            <div class="Appointment_child">
+                <div class="container">
+                    <div class="Appointment_Content">
+                        <div class="Apt_left Apt_Cmn01">
+                            <figure><img src="image/Amyjackson.png" alt="image"></figure>
+                        </div>
+                        <div class="Apt_right Apt_Cmn01">
+                            <h2>Book an <span>Appointment</span></h2>
+                            <p>What can be more exciting. Get Free Consultation with our dermatologists, weight-loss specialists and nutritionists - every time! . Call us to book an appointment at our clinic</p>
+                            <a href="#">Book an Appointment</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
+           </div>
         </section>
         <!-- end--here -->
     </main>
