--- a/index.html
+++ b/index.html
@@ -236,6 +236,218 @@
            </div>
         </section>
         <!-- end--here -->
+        <!-- testimonials -->
+            <section class="Testimonial_Wrapper">
+                <div class="container">
+                    <div class="Testimonial_heading">
+                        <h2>Our <span>client says</span></h2>
+                    </div>
+                    <div class="Testimonial_Content">
+                        <ul>
+                            <li class="Tst01 Tst_cmn02">
+                                <figure>
+                                    <img src="image/tst1.png" alt="image">
+                                </figure>
+                                <p>  
+                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Eveniet omnis architecto possimus, provident veniam natus ut.
+                                    Nobis soluta obcaecati id."
+                                </p>
+                                <h2>Alina Mathew</h2>
+                            </li>
+                            <li class="Tst02 Tst_cmn02">
+                                <figure>
+                                    <img src="image/tst2.png" alt="image">
+                                </figure>
+                                <p>  
+                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Eveniet omnis architecto possimus, provident veniam natus ut.
+                                    Nobis soluta obcaecati id."
+                                </p>
+                                <h2>Alina Mathew</h2>
+                            </li>
+                            <li class="Tst03 Tst_cmn02">
+                                <figure>
+                                    <img src="image/tst3.png" alt="image">
+                                </figure>
+                                <p>  
+                                    "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Eveniet omnis architecto possimus, provident veniam natus ut.
+                                    Nobis soluta obcaecati id."
+                                </p>
+                                <h2>Alina Mathew</h2>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        <!-- end---here -->
+
+        <!-- form--wrp-->
+        <section class="Appointment_Form_wrp">
+            <div class="container">
+                <div class="Apt_heading">
+                    <img src="image/Apt1.png" alt="image">
+                    <h2>Book <span>Appointment</span></h2>
+                </div>
+                <div class="Form_wrp">
+                    <form action="#" method="#">
+                        <div class="form_content">
+                            <div class="Fa1 Frm_cmn01">
+                            <label for="#">Full name</label>
+                            <input type="text" name="Fname" id="Fname" placeholder="Full name" autocapitalize="off">
+                            </div>
+                            <div class="Fa2 Frm_cmn01">
+                                <label for="#">Mobile number</label>
+                                <input type="number" name="number" id="" placeholder="10 digit number" autocapitalize="off">
+                            </div>
+                            <div class="Fa3 Frm_cmn01">
+                                <label for="#">category</label>
+                                <select name="selectCategory" id="Category1">
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="Fa4 Frm_cmn01">
+                                <label for="#">Service</label>
+                                <select name="Selectservice" id="Category2">
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                    <option value="#">
+                                        Lorem, ipsum.
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="Fa5 Frm_cmn01">
+                                <label for="#">Email id</label>
+                                <input type="email" name="email" id="email1" placeholder="Email id" autocapitalize="off">
+                            </div>
+                            <div class="Fa6 Frm_cmn01">
+                                <label for="#">City</label>
+                                <select name="city" id="Category3">
+                                    <option value="#">
+                                        delhi
+                                    </option>
+                                    <option value="#">
+                                        noida
+                                    </option>
+                                    <option value="#">
+                                        gurugram
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="Fa7 Frm_cmn01">
+                                <label for="#">Center</label>
+                                <select name="Center" id="Category3">
+                                    <option value="#">
+                                        delhi
+                                    </option>
+                                    <option value="#">
+                                        noida
+                                    </option>
+                                    <option value="#">
+                                        gurugram
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="Fa8 Frm_cmn01">
+                               <input type="submit" value="Submit">
+                            </div>
+                       </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!--end---here -->
+        <!-- foooter-->
+              <footer>
+                  <div class="container">
+                      <div class="mid-logo">
+                          <figure>
+                              <img src="image/Ftlogo.png" alt="image">
+                          </figure>
+                      </div>
+                      <div class="footer_content">
+                          <div class="Ft01 Ft_cmn01">
+                              <h2>QUICK LINKS</h2>
+                              <ul>
+                                 <li><a href = "#"class="hvr-underline-from-left" >Laser </a></li> 
+                                 <li><a href = "#"class="hvr-underline-from-left" >Botox </a></li>
+                                 <li><a href = "#"class="hvr-underline-from-left" >Fillers</a></li>
+                                 <li><a href = "#"class="hvr-underline-from-left" >Thread lift</a></li>
+                                 <li><a href = "#"class="hvr-underline-from-left" >Tummy tucks</a></li>
+                              </ul>
+                          </div>
+                          <div class="Ft02 Ft_cmn01">
+                            <h2>SERVICES </h2>
+                            <ul>
+                               <li><a href = "#"class="hvr-underline-from-left" >Beauty  </a></li> 
+                               <li><a href = "#"class="hvr-underline-from-left" >Slimming  </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Laser </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Permanent </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Dermat </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Figure Correction  </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Hair Treatments </a></li>
+                            </ul>
+                        </div>
+                        <div class="Ft03 Ft_cmn01">
+                            <h2>SKIN CARE</h2>
+                            <ul>
+                               <li><a href = "#"class="hvr-underline-from-left" >Anti-aging</a></li> 
+                               <li><a href = "#"class="hvr-underline-from-left" >Skin Pigmentation  </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Skin Brightening </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Acne Treatment </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Under Eye Dark Circle </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Skin Rejuvenation  </a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Advanced Facial</a></li>
+                               <li><a href = "#"class="hvr-underline-from-left" >Dull Skin Treatment</a></li>
+                            </ul>
+                        </div>
+                        <div class="Ft04 Ft_cmn01">
+                            <h2>CONTACT US</h2>
+                            <ul>
+                                <li> <p><i class="fas fa-phone-alt"></i> +91 7673686578</p></li>
+                                <li> <p><i class="fas fa-envelope"></i>info.cossetworld@gmail.com</p></li>
+                            </ul>
+                            <ul class="social_wrp">
+                                <li><i class="fab fa-facebook"></i></li> 
+                                <li><i class="fab fa-twitter"></i></li>
+                                <li><i class="fab fa-instagram"></i></li>
+                                <li><i class="fab fa-youtube"></i></li>   
+                            </ul>
+                            <div class="subscribe">
+                                <h3>Subscribe News Letter</h3>
+                                <label for="#">
+                                   <input type="email" name="email2" id="email" placeholder="Email Address" autocapitalize="off">
+                                </label>
+                                <label for="#">
+                                    <input type="submit" id="Submit2" value="Submit">
+                                </label>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="copyright_wrp">
+                      <div class="container">
+                          <div class="copy_content">
+                              <p>Copyright ©2021 Cosset World. All Rights Reserved. </p>
+                              <p> | Terms & Conditions | Disclaimer</p>
+                          </div>
+                      </div>
+                  </div>
+              </footer>
+        <!-- end----footer -->
     </main>
 
 
