--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="Nav-wrp">
                 <nav> 
                     <div class="logo nav_cmn">
-                        <a href="javascript:void(0)">
+                        <a href="index.html">
                             <img src="image/logo3.png" alt="image">
                         </a>
                     </div>
                     <div class="nav-item nav_cmn">
                         <ul>
-                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                            <li><a href="beauty.html" class="hvr-underline-from-left">
                                 Beauty
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
