--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             <img src="image/logo3.png" alt="image">
                         </a>
                     </div>
-                    <div class="nav-item nav_cmn">
-                        <ul>
+                    <div class="nav-item nav_cmn myHeader">
+                        <ul class="Unorder_wrp">
                             <li><a href="beauty.html" class="hvr-underline-from-left">
                                 Beauty
                                 <i class="fas fa-sort-down"></i>
@@ -71,6 +71,11 @@
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
                         </ul>
+                    </div>
+                    <div class="main-bar">
+                        <div class="a"></div>
+                        <div class="b"></div>
+                        <div class="c"></div>
                     </div>
                 </nav>
            </div>
@@ -224,7 +229,8 @@
                 <div class="container">
                     <div class="Appointment_Content">
                         <div class="Apt_left Apt_Cmn01">
-                            <figure><img src="image/Amyjackson.png" alt="image"></figure>
+                            <figure>
+                                <img data-tilt data-tilt-full-page-listening src="image/Amyjackson.png" alt="image"></figure>
                         </div>
                         <div class="Apt_right Apt_Cmn01">
                             <h2>Book an <span>Appointment</span></h2>
