--- a/index.html
+++ b/index.html
@@ -42,26 +42,121 @@
                     </div>
                     <div class="nav-item nav_cmn myHeader">
                         <ul class="Unorder_wrp">
-                            <li><a href="beauty.html" class="hvr-underline-from-left">
-                                Beauty
+                            <li class="skin">
+                                <a href="beauty.html" class="hvr-underline-from-left">
+                                Skin
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
-                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                            <li class="slimming">
+                                <a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Slimming
                                 <i class="fas fa-sort-down"></i>
-                            </a></li>
+                            </a>
+                        </li>
+                        <!-- drop--second -->
+                        <div class="drop_down drop2">
+                            <div class="drop2_sub_wrp">
+                                <div class="list"> 
+                                    <div class="heading-btn">  
+                                        <h3>weight loss</h3> 
+                                        <span>+</span>
+                                    </div>
+                                    <ul class="weight_wrp" id="weight_wrp">
+                                        <li><a href="#">1Kg - Weight Loss</a></li>
+                                        <li><a href="#">Lipofit - 12 </a></li> 
+                                    </ul>
+                                </div>
+                                <div class="list">
+                                    <h3>weight gain</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">1Kg - Weight gain</a></li>
+                                        <li><a href="#">duo therapy</a></li> 
+                                    </ul> 
+                                </div>
+                                <div class="list">
+                                    <h3>BODY THERAPIES / session</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Full Body Therapy</a></li>
+                                        <li><a href="#">Premium Body Therapy</a></li> 
+                                        <li><a href="#">Herbal Anti - Cellulite Therapy</a></li> 
+                                        <li><a href="#">Manual Lymphatic Drainage Therapy</a></li> 
+                                        <li><a href="#">Bone Strengthening Therapy</a></li> 
+                                    </ul> 
+                                </div>
+                                <div class="list"> 
+                                    <h3>SPOT REDUCTION THERAPY / session</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Tummy Trim Therapy</a></li>
+                                        <li><a href="#">Arm Trim Therapy</a></li> 
+                                        <li><a href="#">Hip Trim Therapy</a></li>
+                                        <li><a href="#">Thigh Trim Therapy</a></li> 
+                                        <li><a href="#">Chest Trim Therapy</a></li>
+                                        <li><a href="#">Side Trim Therapy</a></li> 
+                                        <li><a href="#">Integrative Massage Therapy</a></li> 
+                                        <li><a href="#">G-5</a></li>
+                                    </ul> 
+                                </div> 
+                                <div class="list"> 
+                                    <h3>SKIN FIRMING / session</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Body Firming / Contouring</a></li>  
+                                    </ul> 
+                                </div> 
+                                <div class="list"> 
+                                    <h3>SPECIALISED THERAPIES</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Turboslim</a></li>
+                                        <li><a href="#">Waist & Tummy Trim Treatment</a></li>
+                                        <li><a href="#">Arm Trim Treatment</a></li>
+                                        <li><a href="#">Hip Trim Treatment</a></li> 
+                                        <li><a href="#">Thigh Trim Treatment</a></li>
+                                        <li><a href="#">Get Therapy</a></li> 
+                                        <li><a href="#">Ultraslim / Ultratrim</a></li>
+                                        <li><a href="#">SlimLite / Trimlite</a></li> 
+                                    </ul> 
+                                </div> 
+                                <div class="list"> 
+                                    <h3>WELLNESS TREATMENTS</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Slimming Cum Core Muscle Strengthening Then</a></li>
+                                        <li><a href="#">Neuromuscular Therapy</a></li>
+                                        <li><a href="#">Analgesic T herapy</a></li>   
+                                    </ul> 
+                                </div> 
+                                <div class="list"> 
+                                    <h3>BIO ENEROYTHERAP</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
+                                    </ul> 
+                                </div> 
+                                <div class="list"> 
+                                    <h3>VTRON CTS TREATMENTS</h3>
+                                    <ul class="weight_wrp">
+                                        <li><a href="#">Body</a></li>
+                                        <li><a href="#">Face</a></li>
+                                        <li><a href="#">Neck Hump   </a></li>
+                                        <li><a href="#">Knee</a></li> 
+                                        <li><a href="#">Calf</a></li>
+                                        <li><a href="#">Get Therapy</a></li> 
+                                        <li><a href="#">VTRON CTS - Refit programme</a></li> 
+                                    </ul> 
+                                </div> 
+                          </div>
+                        </div>
+                        <!-- end--here -->
                             <li class="hair-care">
-                                <a href="javascript:void(0)" class="hvr-underline-from-left"> Hair Care
+                                <a href="#" class="hvr-underline-from-left"> Hair Care
                                     <i class="fas fa-sort-down"></i>
-                                </a>
+                                </a> 
                             </li>
-                            <ul class="drop_down">
-                                <li><a href="#">Comfort Treatment</a></li>
-                                <li><a href="#">Vitality Treatment</a></li>
-                                <li><a href="#">Rebalance Treatment</a></li>
-                                <li><a href="#">Purity Treatment</a></li>
-                                <li><a href="#">Reconstruct</a></li>
-                           </ul>
+                            <!-- drop--third -->
+                            <div class="drop_down drop3">
+                                <div class="list"><a href="#">hair transplant ( men & Women )</a></div>
+                                <div class="list"><a href="#">PRP Treatment</a></div>
+                                <div class="list"><a href="#">Scalp & hair Treatment</a></div>
+                                <div class="list"><a href="#">hair Pigmentation</a></div> 
+                            </div>
+                           <!-- end--here -->
                             <li><a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Dermat 
                                 <i class="fas fa-sort-down"></i>
